Fix css on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,4 @@
-body, html {
-    width: 80%;
-    height: 100%;
-}
 html {
- min-height:100%;
  position:relative
  background-color: #fff;
  font-family: sans-serif;
